Responsive views on cruds

--- a/app/src/main/res/layout/activity_detenidos_seleccion.xml
+++ b/app/src/main/res/layout/activity_detenidos_seleccion.xml
@@ -105,7 +105,7 @@
         android:id="@+id/scrollView6"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginVertical="20dp"
+        android:layout_marginVertical="10dp"
         android:layout_weight="1"
         app:layout_constraintBottom_toTopOf="@+id/textView26"
         app:layout_constraintEnd_toEndOf="parent"
@@ -125,7 +125,8 @@
         android:id="@+id/Detenidos_Seleccion_btnGuardar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/rounded_corners_all"
         android:backgroundTint="#3D96FF"
         android:fontFamily="@font/poppins_semibold"
