--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,143 +1,168 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
 
-    <Button
-        android:id="@+id/btnIniciarSesiónLogIn"
-        android:layout_width="334dp"
-        android:layout_height="55dp"
-        android:background="@drawable/rounded_corners_all"
-        android:backgroundTint="@color/colorPrimary"
-        android:elevation="20dp"
-        android:fontFamily="@font/poppins_semibold"
-        android:padding="10dp"
-        android:text="Iniciar Sesión"
-        android:textAllCaps="false"
-        android:textColor="@color/PrimaryColorButtonText"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.493"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.597" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:layout_marginLeft="40dp"
+        android:layout_marginTop="50dp"
+        android:orientation="vertical">
 
-    <Button
-        android:id="@+id/btnIniciarSesionRegistrarse"
-        android:layout_width="334dp"
-        android:layout_height="55dp"
-        android:background="@drawable/rounded_corners_all"
-        android:backgroundTint="@color/colorAccent"
-        android:elevation="20dp"
-        android:fontFamily="@font/poppins_semibold"
-        android:padding="10dp"
-        android:text="Registrarse"
-        android:textAllCaps="false"
-        android:textColor="@color/colorPrimary"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.493"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.948" />
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="151dp"
+            android:layout_height="77dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.19"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.066"
+            app:srcCompat="@drawable/logo_name_right" />
 
-    <EditText
-        android:id="@+id/txtContraseñaLogIn"
-        android:layout_width="333dp"
-        android:layout_height="51dp"
-        android:layout_gravity="center"
-        android:background="@drawable/rounded_corners_all"
-        android:backgroundTint="@color/EditTextBackground"
-        android:elevation="20dp"
-        android:ems="10"
-        android:fontFamily="@font/poppins_semibold"
-        android:hint="Contraseña"
-        android:inputType="textPassword"
-        android:maxLength="15"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
-        android:textColor="@color/TextColor"
-        android:textColorHint="@color/HintColor"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.537"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.487" />
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fontFamily="@font/poppins_extrabold"
+            android:gravity="center_vertical"
+            android:text="¡Bienvenido!"
+            android:textAlignment="textStart"
+            android:textColor="@color/register_loginUpSideText"
+            android:textSize="36sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.292"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.241"
+            tools:ignore="RtlCompat" />
+    </LinearLayout>
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
+
+        <EditText
+            android:id="@+id/txtUsuarioLogIn"
+            android:layout_width="332dp"
+            android:layout_height="51dp"
+            android:background="@drawable/rounded_corners_all"
+            android:backgroundTint="@color/EditTextBackground"
+            android:elevation="20dp"
+            android:ems="10"
+            android:fontFamily="@font/poppins_semibold"
+            android:gravity="center_vertical"
+            android:hint="Usuario"
+            android:inputType="textPersonName"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:textColor="@color/TextColor"
+            android:textColorHint="@color/HintColor"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.543"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.398" />
+
+        <EditText
+            android:id="@+id/txtContraseñaLogIn"
+            android:layout_width="333dp"
+            android:layout_height="51dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/rounded_corners_all"
+            android:backgroundTint="@color/EditTextBackground"
+            android:elevation="20dp"
+            android:ems="10"
+            android:fontFamily="@font/poppins_semibold"
+            android:hint="Contraseña"
+            android:inputType="textPassword"
+            android:maxLength="15"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:textColor="@color/TextColor"
+            android:textColorHint="@color/HintColor"
+            android:textSize="16sp"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <Button
+            android:id="@+id/btnIniciarSesiónLogIn"
+            android:layout_width="334dp"
+            android:layout_height="55dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/rounded_corners_all"
+            android:backgroundTint="@color/colorPrimary"
+            android:elevation="20dp"
+            android:fontFamily="@font/poppins_semibold"
+            android:padding="10dp"
+            android:text="Iniciar Sesión"
+            android:textAllCaps="false"
+            android:textColor="@color/PrimaryColorButtonText"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.493"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.597" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/poppins_extrabold"
-        android:text="¡Bienvenido!"
-        android:textAlignment="center"
-        android:textColor="@color/register_loginUpSideText"
-        android:textSize="36sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.292"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.241" />
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
+        android:paddingBottom="30dp">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="151dp"
-        android:layout_height="77dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.19"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.066"
-        app:srcCompat="@drawable/logo_name_right" />
+        <TextView
+            android:id="@+id/LogInCambiarCredenciales"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/poppins_medium"
+            android:text="¿Olvidaste tus credenciales?"
+            android:textColor="@color/gray"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.85" />
 
-    <EditText
-        android:id="@+id/txtUsuarioLogIn"
-        android:layout_width="332dp"
-        android:layout_height="51dp"
-        android:background="@drawable/rounded_corners_all"
-        android:backgroundTint="@color/EditTextBackground"
-        android:elevation="20dp"
-        android:ems="10"
-        android:fontFamily="@font/poppins_semibold"
-        android:gravity="center_vertical"
-        android:hint="Usuario"
-        android:inputType="textPersonName"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
-        android:textColor="@color/TextColor"
-        android:textColorHint="@color/HintColor"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.543"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.398" />
+        <Button
+            android:id="@+id/btnIniciarSesionRegistrarse"
+            android:layout_width="334dp"
+            android:layout_height="55dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/rounded_corners_all"
+            android:backgroundTint="@color/colorAccent"
+            android:elevation="20dp"
+            android:fontFamily="@font/poppins_semibold"
+            android:padding="10dp"
+            android:text="Registrarse"
+            android:textAllCaps="false"
+            android:textColor="@color/colorPrimary"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.493"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.948" />
+    </LinearLayout>
 
-    <TextView
-        android:id="@+id/LogInCambiarCredenciales"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/poppins_medium"
-        android:text="¿Olvidaste tus credenciales?"
-        android:textColor="@color/gray"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.85" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
