--- a/app/src/main/res/layout/activity_acercamientos_info.xml
+++ b/app/src/main/res/layout/activity_acercamientos_info.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#EDF2F6"
+    android:orientation="vertical"
     tools:context=".Acercamientos_info">
 
     <LinearLayout
@@ -52,7 +53,8 @@
     <ScrollView
         android:id="@+id/scrollView4"
         android:layout_width="match_parent"
-        android:layout_height="600dp"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:background="#EDF2F6"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
 
@@ -219,6 +221,7 @@
         android:layout_width="match_parent"
         android:layout_height="112dp"
         android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="10dp"
         android:layout_marginBottom="20dp"
         android:background="#EDF2F6"
         android:orientation="vertical"
@@ -301,4 +304,4 @@
         </LinearLayout>
 
     </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
