--- a/app/src/main/res/layout/activity_decomisos_main.xml
+++ b/app/src/main/res/layout/activity_decomisos_main.xml
@@ -47,27 +47,27 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/linearLayout3"
-        android:layout_width="350dp"
-        android:layout_height="41dp"
+        android:id="@+id/linearLayout6"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
         android:layout_marginTop="10dp"
-        android:background="@drawable/rounded_corners_right"
         android:orientation="horizontal"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
 
         <EditText
-            android:id="@+id/editTextTextPersonName"
-            android:layout_width="wrap_content"
+            android:id="@+id/Decomisos_Main_txtBuscar"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="20dp"
+            android:layout_marginRight="50dp"
             android:layout_weight="1"
-            android:background="@android:color/transparent"
+            android:background="@color/transparent"
             android:ems="10"
             android:fontFamily="@font/poppins"
             android:hint="Busqueda"
             android:inputType="textPersonName"
-            android:textSize="16sp" />
+            android:paddingHorizontal="20dp"
+            android:textSize="16sp"
+            tools:background="@drawable/rounded_corners_right" />
 
     </LinearLayout>
 
