--- a/app/src/main/res/layout/activity_denuncias_main.xml
+++ b/app/src/main/res/layout/activity_denuncias_main.xml
@@ -47,44 +47,34 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/linearLayout6"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_marginTop="10dp"
         android:orientation="horizontal"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
 
-        <LinearLayout
-            android:layout_width="350dp"
-            android:layout_height="41dp"
-            android:background="@drawable/rounded_corners_right"
-            android:orientation="horizontal">
-
-            <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="20dp"
-                android:layout_weight="1"
-                android:background="@color/white"
-                android:ems="10"
-                android:fontFamily="@font/poppins"
-                android:hint="Busqueda"
-                android:inputType="textPersonName"
-                android:textSize="16sp" />
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:padding="7dp"
-                android:src="@drawable/button_search" />
-        </LinearLayout>
+        <EditText
+            android:id="@+id/Denuncias_Main_txtBuscar"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginRight="50dp"
+            android:layout_weight="1"
+            android:background="@color/transparent"
+            android:ems="10"
+            android:fontFamily="@font/poppins"
+            android:hint="Busqueda"
+            android:inputType="textPersonName"
+            android:paddingHorizontal="20dp"
+            android:textSize="16sp"
+            tools:background="@drawable/rounded_corners_right" />
 
     </LinearLayout>
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:layout_weight="1"
         android:paddingBottom="10dp">
 
@@ -110,6 +100,7 @@
         android:orientation="horizontal">
 
         <ImageView
+            android:id="@+id/imageView2"
             android:layout_width="0dp"
             android:layout_height="34dp"
             android:layout_marginLeft="10dp"
@@ -119,11 +110,12 @@
             android:paddingLeft="7dp"
             android:paddingTop="7dp"
             android:paddingBottom="7dp"
-            android:src="@drawable/button_person_add" />
+            android:src="@drawable/button_plus" />
 
         <TextView
+            android:id="@+id/textView5"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_margin="10dp"
             android:layout_weight="1"
             android:fontFamily="@font/poppins_semibold"
