--- a/app/src/main/res/layout/activity_detenidos_info.xml
+++ b/app/src/main/res/layout/activity_detenidos_info.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#EDF2F6"
+    android:orientation="vertical"
     tools:context=".Detenidos_info">
 
     <LinearLayout
@@ -50,7 +51,8 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="600dp"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:background="#EDF2F6"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout12">
 
@@ -248,6 +250,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="15dp"
                     android:layout_marginRight="10dp"
+                    android:layout_marginBottom="20dp"
                     android:fontFamily="@font/poppins_medium"
                     android:text="aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
                     android:textColor="#313131"
@@ -261,6 +264,7 @@
         android:layout_width="match_parent"
         android:layout_height="112dp"
         android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="10dp"
         android:layout_marginBottom="20dp"
         android:background="#EDF2F6"
         android:orientation="vertical"
@@ -343,4 +347,4 @@
         </LinearLayout>
 
     </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
