--- a/app/src/main/res/layout/activity_infractores_main.xml
+++ b/app/src/main/res/layout/activity_infractores_main.xml
@@ -50,49 +50,35 @@
   </LinearLayout>
 
   <LinearLayout
-      android:id="@+id/linearLayout3"
-      android:layout_width="350dp"
-      android:layout_height="41dp"
+      android:id="@+id/linearLayout6"
+      android:layout_width="match_parent"
+      android:layout_height="40dp"
       android:layout_marginTop="10dp"
-      android:background="@drawable/rounded_corners_right"
       android:orientation="horizontal"
-      app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
 
     <EditText
-        android:id="@+id/editTextTextPersonName"
-        android:layout_width="wrap_content"
+        android:id="@+id/Infractores_Main_txtBuscar"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginLeft="20dp"
+        android:layout_marginRight="50dp"
         android:layout_weight="1"
-        android:background="@android:color/transparent"
+        android:background="@color/transparent"
         android:ems="10"
         android:fontFamily="@font/poppins"
         android:hint="Busqueda"
         android:inputType="textPersonName"
-        android:textSize="16sp" />
+        android:paddingHorizontal="20dp"
+        android:textSize="16sp"
+        tools:background="@drawable/rounded_corners_right" />
 
   </LinearLayout>
-
-  <TextView
-      android:id="@+id/textView20"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_marginStart="16dp"
-      android:layout_marginTop="16dp"
-      android:fontFamily="@font/poppins_semibold"
-      android:text="General"
-      android:textColor="#5B5B5B"
-      android:textSize="16sp"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
 
   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="0dp"
-      android:layout_marginTop="4dp"
-      android:layout_weight="1"
-      android:paddingBottom="10dp">
+      android:layout_marginVertical="10dp"
+      android:layout_weight="1">
 
     <LinearLayout
         android:id="@+id/infractores_main_infractores_cards"
@@ -108,7 +94,6 @@
       android:layout_height="wrap_content"
       android:layout_gravity="bottom"
       android:layout_marginLeft="20dp"
-      android:layout_marginTop="10dp"
       android:layout_marginBottom="20dp"
       android:background="@drawable/rounded_corners_all"
       android:backgroundTint="#4399FF"
