Pantalla elección idioma y nacionalidad fixed

--- a/app/src/main/res/layout/card_registro_usuario_idioma.xml
+++ b/app/src/main/res/layout/card_registro_usuario_idioma.xml
@@ -3,29 +3,34 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/cardIdiomaSeleccionable"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:gravity="center"
-    android:orientation="vertical"
-    android:padding="16dp">
+    android:layout_height="50dp"
+    android:orientation="vertical">
 
     <LinearLayout
-        android:layout_width="366dp"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
         android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/lblIdiomaOnCard"
-            android:layout_width="245dp"
-            android:layout_height="wrap_content"
-            android:textColor="@android:color/black"
-            android:textSize="18sp" />
-
         <LinearLayout
-            android:layout_width="117dp"
-            android:layout_height="41dp"
-            android:gravity="right|center_vertical"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/rounded_corners_all"
+            android:gravity="center_vertical"
             android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/lblIdiomaOnCard"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:fontFamily="@font/poppins"
+                android:gravity="center_vertical"
+                android:paddingLeft="20dp"
+                android:text="Hola"
+                android:textColor="@color/gray"
+                android:textSize="16sp" />
 
             <View
                 android:id="@+id/selectedBooleanCircle"
@@ -33,8 +38,8 @@
                 android:layout_height="24dp"
                 android:layout_marginEnd="8dp"
                 android:background="@drawable/registro_ususario_circulo_seleccion_falso" />
-        </LinearLayout>
 
+        </LinearLayout>
     </LinearLayout>
 
     <!-- Agrega otros elementos adicionales a la tarjeta -->
