--- a/app/src/main/res/layout/activity_infractores_main.xml
+++ b/app/src/main/res/layout/activity_infractores_main.xml
@@ -54,6 +54,8 @@
       android:layout_width="match_parent"
       android:layout_height="40dp"
       android:layout_marginTop="10dp"
+      android:layout_marginRight="50dp"
+      android:background="@drawable/rounded_corners_right"
       android:orientation="horizontal"
       app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
 
@@ -61,16 +63,14 @@
         android:id="@+id/Infractores_Main_txtBuscar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginRight="50dp"
         android:layout_weight="1"
-        android:background="@color/transparent"
         android:ems="10"
         android:fontFamily="@font/poppins"
         android:hint="Busqueda"
         android:inputType="textPersonName"
         android:paddingHorizontal="20dp"
         android:textSize="16sp"
-        tools:background="@drawable/rounded_corners_right" />
+        android:background="@drawable/rounded_corners_right" />
 
   </LinearLayout>
 
