Validaciones de completas

--- a/app/src/main/res/layout/activity_denuncias_agregar.xml
+++ b/app/src/main/res/layout/activity_denuncias_agregar.xml
@@ -85,8 +85,8 @@
                     android:ems="10"
                     android:fontFamily="@font/poppins_medium"
                     android:hint="DUI"
-                    android:inputType="textPersonName"
-                    android:maxLength="50"
+                    android:inputType="phone"
+                    android:maxLength="10"
                     android:paddingHorizontal="20dp"
                     android:paddingVertical="10dp"
                     android:textColor="#000000"
