--- a/app/src/main/res/layout/activity_infractores_agregar.xml
+++ b/app/src/main/res/layout/activity_infractores_agregar.xml
@@ -241,7 +241,7 @@
                     android:ems="10"
                     android:fontFamily="@font/poppins_medium"
                     android:hint="Dui"
-                    android:inputType="number"
+                    android:inputType="phone"
                     android:maxLength="10"
                     android:paddingHorizontal="20dp"
                     android:paddingVertical="10dp"
