referencia personal duplicada fixed

--- a/app/src/main/res/layout/activity_decomisos_agregar.xml
+++ b/app/src/main/res/layout/activity_decomisos_agregar.xml
@@ -68,7 +68,7 @@
                 android:id="@+id/Decomisos_agregar_imgDecomiso"
                 android:layout_width="match_parent"
                 android:layout_height="250dp"
-                app:srcCompat="@drawable/sample_image" />
+                app:srcCompat="@drawable/void_image" />
 
             <LinearLayout
                 android:layout_width="match_parent"
